Fixed issure where overflowed content would make parent container bigger when posts were popped up from the profilebottom page

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,14 @@
     grid-column: 1 / 6;
   }
 
+  .commentsul{
+    height: 60vh !important;
+  }
+
+  .commentsdiv {
+    height: 75% !important;
+  }
+
   .mainfeed, .topofprofile, .bottomofprofile, .messagebox, .addpost, .mainsettings, .homecontainer, .postSuccessPopUp, .messageboxcontainer, .searchbar, .searchResults, .loading {
     grid-column: 1 / 6 !important;
   }
