--- a/src/pages/home/mainfeed/Main.css
+++ b/src/pages/home/mainfeed/Main.css
@@ -84,6 +84,7 @@
 
 .imageInformation {
   background: #F4EEE0;
+  height:100%;
   flex-grow:1;
 }
 
@@ -96,13 +97,17 @@
 }
 
 .commentsdiv {
+  position:relative;
   width:100%;
   height: 83%;
   margin:0;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 .commentsul {
+  position:relative;
+  overflow-y: scroll;
+  height:70vh;
   padding-left:0.5em;
   list-style-type:none;
   color:black;
